<resources>
    <string name="app_name">Sleewell</string>
    <string name="title_home">Home</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_stats">Statistics</string>
    <string name="title_sounds">Sounds</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="connection_headers">Connectivity</string>
    <string name="notifications_headers">Notifications</string>

    <!-- Connections Preferences -->
    <string name="wifi_title">Wifi</string>
    <string name="wifi_summary_on">Disable wifi connection when putting the phone on the base</string>
    <string name="wifi_summary_off">Keep wifi during night</string>

    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_summary_on">Disable bluetooth connection when putting the phone on the base</string>
    <string name="bluetooth_summary_off">Keep bluetooth during night</string>

    <!-- NPD Preferences -->
    <string name="npd_title">Ne pas déranger</string>
    <string name="npd_summary_on">Disable notifications when putting the phone on the base</string>
    <string name="npd_summary_off">Keep all the notifications during night</string>

    <string name="title_activity_proto_activated">ProtoActivated</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Option -->
    <string name="Option_title">Option</string>
    <string name="Halo_option">Halo</string>
    <string name="Halo_on">Halo turn on</string>
    <string name="Halo_off">Halo turn off</string>
    <string name="Music_option">Music</string>
    <string name="Music_on">Music turn on</string>
    <string name="Music_off">Music turn off</string>
    <!-- Button -->
    <string name="Go_to_sleep_button">Go To Sleep</string>

    <!-- Alarms sound -->
    <string-array name="alarms_array">
        <item>Choose music for your alarm</item>
        <item>Bad guy</item>
        <item>Mii theme</item>
    </string-array>

</resources>
