<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connection_headers">

        <SwitchPreferenceCompat
            app:key="wifi"
            app:title="@string/wifi_title"
            app:summaryOff="@string/wifi_summary_off"
            app:summaryOn="@string/wifi_summary_on" />

        <SwitchPreferenceCompat
            app:key="bluetooth"
            app:title="@string/bluetooth_title"
            app:summaryOff="@string/bluetooth_summary_off"
            app:summaryOn="@string/bluetooth_summary_on" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications_headers">
        <SwitchPreferenceCompat
            app:key="SleepMode"
            app:title="@string/npd_title"
            app:summaryOff="@string/npd_summary_off"
            app:summaryOn="@string/npd_summary_on" />
    </PreferenceCategory>

</PreferenceScreen>
