<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sleewell.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.example.sleewell.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_sounds"
        android:name="com.example.sleewell.ui.sounds.SoundsFragment"
        android:label="@string/title_sounds"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.sleewell.ui.statistics.StatisticsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_notifications" />
</navigation>